[gd_scene load_steps=25 format=4 uid="uid://b18d830urpadj"]

[ext_resource type="Script" path="res://scavenger-hunt/room3/room_3.gd" id="1_bybdk"]
[ext_resource type="Texture2D" uid="uid://ec5yrxvdkst1" path="res://scavenger-hunt/floors/floor-2.png" id="3_vka00"]
[ext_resource type="Texture2D" uid="uid://cxyhm0m1gvi36" path="res://scavenger-hunt/floors/floor-1.png" id="3_xoxfm"]
[ext_resource type="Texture2D" uid="uid://dcxyqtgyuf2n5" path="res://scavenger-hunt/walls/walls-2.png" id="4_7m02r"]
[ext_resource type="Texture2D" uid="uid://bnr2hme1nljq2" path="res://scavenger-hunt/borders/borders-2.png" id="5_k6pcd"]
[ext_resource type="Texture2D" uid="uid://balb6821wwhda" path="res://scavenger-hunt/walls/walls-5.png" id="5_xf1vt"]
[ext_resource type="Texture2D" uid="uid://baukst30o0gdr" path="res://scavenger-hunt/doors/glass-1.png" id="6_4raui"]
[ext_resource type="Texture2D" uid="uid://m7sio43tcdvy" path="res://scavenger-hunt/doors/armor-1.png" id="7_jmo4o"]
[ext_resource type="Texture2D" uid="uid://div7wx1xl4e7n" path="res://scavenger-hunt/room3/security.png" id="9_1v31f"]
[ext_resource type="PackedScene" uid="uid://wnattyfpcri1" path="res://scavenger-hunt/pop_up/question.tscn" id="9_aovdl"]
[ext_resource type="FontFile" uid="uid://dad653sjnvr6f" path="res://scavenger-hunt/fonts/dogicapixel.ttf" id="10_d4hnv"]
[ext_resource type="PackedScene" uid="uid://byo5jn1nt53yv" path="res://scavenger-hunt/player/player.tscn" id="10_iyeug"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kpdnq"]
texture = ExtResource("3_xoxfm")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n7lml"]
texture = ExtResource("3_vka00")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSet" id="TileSet_m5d0m"]
tile_size = Vector2i(48, 48)
sources/0 = SubResource("TileSetAtlasSource_kpdnq")
sources/1 = SubResource("TileSetAtlasSource_n7lml")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g3l6x"]
texture = ExtResource("4_7m02r")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_27ixb"]
texture = ExtResource("5_xf1vt")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)

[sub_resource type="TileSet" id="TileSet_1omfq"]
tile_size = Vector2i(48, 48)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_g3l6x")
sources/1 = SubResource("TileSetAtlasSource_27ixb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y7qes"]
size = Vector2(54, 124)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f744s"]
texture = ExtResource("5_k6pcd")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, 24, 24, 3.09359, 24, 2.91682, -24)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, 24, -24, -24, -3.09359, -24, -2.91682, 24)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, 3.09359, 24, 3.09359, -5.83363, -24, -6.01041)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, -24, -24, -24, 24, -3.09359, 24, -3.09359, -5.83363, 24, -6.01041)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, 24, 24, 3.09359, 24, 2.91682, -24)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, 24, -24, -24, -3.09359, -24, -2.91682, 24)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, 3.09359, 24, 3.09359, -5.83363, -24, -6.01041)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, -24, -24, -24, 24, -3.09359, 24, -3.09359, -5.83363, 24, -6.01041)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, 24, 24, 3.09359, 24, 2.91682, -24)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, 24, -24, -24, -3.09359, -24, -2.91682, 24)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, 3.09359, 24, 3.09359, -5.83363, -24, -6.01041)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, -24, -24, -24, 24, -3.09359, 24, -3.09359, -5.83363, 24, -6.01041)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, -24, -24, -24, 24, -3.09359, 24, -3.09359, -5.83363, 24, -6.01041)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, 3.09359, 24, 3.09359, -5.83363, -24, -6.01041)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(24, -24, 24, -5.65686, 2.91682, -6.01041, 2.91682, -24)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, -24, -5.65686, -2.91682, -6.01041, -2.91682, -24)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, -5.83363, -24, -5.65685)

[sub_resource type="TileSet" id="TileSet_ga7pf"]
tile_size = Vector2i(48, 48)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_f744s")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6d387"]
size = Vector2(48, 124)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_531ls"]
size = Vector2(42.5, 65)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fils2"]

[node name="Room3" type="Node2D"]
script = ExtResource("1_bybdk")

[node name="Floor" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAtAAsAAAABAAAAAAAuAAsAAAABAAAAAAAvAAsAAAABAAAAAAAwAAsAAAABAAAAAAAxAAsAAAABAAAAAAAsAAsAAAAAAAAAAAAsAAwAAAAAAAEAAAAsAA0AAAAAAAEAAAAsAA4AAAAAAAEAAAAsAA8AAAAAAAEAAAApAAwAAAABAAAAAAAqAAwAAAABAAAAAAArAAwAAAABAAAAAAAtAAwAAAACAAEAAAAtAA0AAAACAAEAAAAtAA4AAAACAAEAAAAtAA8AAAACAAEAAAAuAAwAAAACAAEAAAAuAA0AAAACAAEAAAAuAA4AAAACAAEAAAAuAA8AAAACAAEAAAAvAAwAAAACAAEAAAAvAA0AAAACAAEAAAAvAA4AAAACAAEAAAAvAA8AAAACAAEAAAAwAAwAAAACAAEAAAAwAA0AAAACAAEAAAAwAA4AAAACAAEAAAAwAA8AAAACAAEAAAAxAAwAAAACAAEAAAAxAA0AAAACAAEAAAAxAA4AAAACAAEAAAAxAA8AAAACAAEAAAAoAAwAAAABAAAAAAAsAAoAAQABAAEAAAAtAAoAAQABAAEAAAAuAAoAAQABAAEAAAAvAAoAAQABAAEAAAAwAAoAAQABAAEAAAAxAAoAAQABAAEAAAA=")
tile_set = SubResource("TileSet_m5d0m")

[node name="Walls" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAApAAsAAAABAAEAAAAqAAsAAAABAAEAAAArAAsAAAACAAEAAAArAAoAAAAJAAAAAAAqAAoAAAABAAAAAAAoAAoAAAABAAAAAAApAAoAAAABAAAAAAAoAAsAAAABAAEAAAAsAAoAAQAAAAEAAAAtAAoAAQAAAAEAAAAuAAoAAQABAAEAAAAwAAoAAQADAAEAAAAxAAoAAQAAAAEAAAAsAAkAAQAAAAAAAAAuAAkAAQABAAAAAAAtAAkAAQAAAAAAAAAwAAkAAQADAAAAAAAxAAkAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_1omfq")

[node name="EnterDoor" type="StaticBody2D" parent="."]
position = Vector2(2068, 563)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="EnterDoor"]
texture = ExtResource("6_4raui")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterDoor"]
shape = SubResource("RectangleShape2D_y7qes")

[node name="Borders" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAArAAoAAAAMAAMAAAAoAAoAAAAHAAEAAAApAAoAAAAHAAEAAAAqAAoAAAAHAAEAAAAoAA0AAAAHAAEAAAApAA0AAAAHAAEAAAAqAA0AAAAHAAEAAAArAA0AAAAJAAAAAAArAA4AAAAMAAAAAAArAA8AAAAMAAAAAAAyAAsAAAAIAAIAAAAyAAwAAAAIAAIAAAAyAA0AAAAIAAIAAAAyAA4AAAAIAAIAAAAyAA8AAAAIAAIAAAArAAkAAAAMAAAAAAAyAAkAAAAIAAIAAAAyAAoAAAAIAAIAAAAsABAAAAAHAAEAAAAtABAAAAAHAAEAAAAuABAAAAAHAAEAAAAvABAAAAAHAAEAAAAwABAAAAAHAAEAAAAxABAAAAAHAAEAAAAyABAAAAAIAAMAAAArABAAAAAMAAEAAAA=")
tile_set = SubResource("TileSet_ga7pf")

[node name="LeaveDoor" type="StaticBody2D" parent="."]
position = Vector2(2280, 466)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="LeaveDoor"]
position = Vector2(0, 0.500005)
texture = ExtResource("7_jmo4o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeaveDoor"]
shape = SubResource("RectangleShape2D_6d387")

[node name="SecurityGuard" type="StaticBody2D" parent="."]
position = Vector2(2285, 512)
scale = Vector2(0.8, 0.8)
collision_layer = 5
collision_mask = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="SecurityGuard"]
texture = ExtResource("9_1v31f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecurityGuard"]
shape = SubResource("RectangleShape2D_531ls")

[node name="Player" parent="." instance=ExtResource("10_iyeug")]
position = Vector2(2134, 590)
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(6, 6)
limit_left = 2064
limit_top = 440
limit_right = 2421
limit_bottom = 786

[node name="PressE" type="Label" parent="Player"]
visible = false
offset_left = -31.2
offset_top = 13.2
offset_right = 93.8
offset_bottom = 20.2
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_d4hnv")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_fils2")
text = "Press [E] to interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Question" parent="." instance=ExtResource("9_aovdl")]
visible = false
offset_left = 2141.0
offset_top = 505.0
offset_right = 2371.0
offset_bottom = 595.0

[connection signal="popup_close" from="." to="Player" method="_on_room_3_popup_close"]
[connection signal="popup_open" from="." to="Player" method="_on_room_3_popup_open"]
[connection signal="interact" from="Player" to="." method="_on_player_interact"]
[connection signal="no_interact" from="Player" to="." method="_on_player_no_interact"]
[connection signal="option1" from="Question" to="." method="_on_question_option_1"]
[connection signal="option2" from="Question" to="." method="_on_question_option_2"]
[connection signal="option3" from="Question" to="." method="_on_question_option_3"]
